new data version, upcoming closures, general tidy. Fix some more rail tests